Wed Aug 31 16:28:04 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_io_m17n.rb (TestIO_M17N#test_{default_mode_on_dosish,
	  default_mode_on_unix,text_mode,binary_mode}): tests for [Bug #5164].

Wed Aug 31 15:54:11 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json: Merge json gem v1.5.4 (3dab4c5a6a97fac03dac).

Wed Aug 31 13:09:41 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* numeric.c (flo_round): Avoid overflow by optimizing for trivial
	  cases [Bug #5227]

Wed Aug 31 00:50:01 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_select_with_thread): and my typo. we all must
	  be more careful.

Wed Aug 31 00:48:38 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* thread.c (rb_thread_select): critical typo in r33117.

Wed Aug 31 00:30:49 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/-ext-/old_thread_select/test_old_thread_select.rb
	  (TestOldThreadSelect#test_old_select_read_timeout): if the machine
	  is fast enough, the time used by code around IO.select may be smaller
	  than Time implement threshold.

Wed Aug 31 00:04:38 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/-test-/old_thread_select/old_thread_select.c (old_thread_select):
	  typo.

	* test/-ext-/old_thread_select/test_old_thread_select.rb
	  (TestOldThreadSelect#test_old_select_signal_safe): use SIGINT instead
	  of SIGUSR1 because the former is general and the latter is platform
	  dependent.

Tue Aug 30 23:59:36 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c, include/ruby/intern.h (rb_w32_fd_copy): implement
	  for rb_thread_select() in thread.c.  the use of rb_fd_copy() is
	  introduced in r33117.
	  [Bug #5251] [ruby-core:39195]

	* thread.c (rb_thread_select): must call rb_fd_init() before using
	  rb_fdset_t.  see the implementations of rb_fd_init()s if you want to
	  know the reason.

Tue Aug 30 22:34:45 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* test/dl/test_callback.rb (test_callback_with_string): prevents